[gd_scene load_steps=13 format=3 uid="uid://qp5c0ubam6af"]

[ext_resource type="Script" uid="uid://d06n8mnm4kyar" path="res://Scripts/pause.gd" id="1_e0jm0"]
[ext_resource type="Texture2D" uid="uid://8e8kg8fcxhyc" path="res://Visual Assets/New Assets/Menus/Manilla Folder opening-Sheet.png" id="2_3fojq"]
[ext_resource type="Texture2D" uid="uid://mgxg5clyf7k6" path="res://Visual Assets/New Assets/Full Screen Scenes/Office Background.png" id="3_nsogc"]
[ext_resource type="FontFile" uid="uid://bqx8h2rwv8ue1" path="res://Visual Assets/computermodern-typewriter/cmunvi.woff2" id="4_0pswh"]
[ext_resource type="FontFile" uid="uid://dqmnd3avwfkhl" path="res://Visual Assets/Fonts/NotJamOldStyle11/NotJamOldStyle14.ttf" id="5_3fojq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fuc61"]
atlas = ExtResource("2_3fojq")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v22j"]
atlas = ExtResource("2_3fojq")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5tpt"]
atlas = ExtResource("2_3fojq")
region = Rect2(600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf4m3"]
atlas = ExtResource("2_3fojq")
region = Rect2(900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_u020q"]
atlas = ExtResource("2_3fojq")
region = Rect2(1200, 0, 300, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_1hph1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuc61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v22j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5tpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf4m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u020q")
}],
"loop": false,
"name": &"open",
"speed": 16.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nsogc"]
bg_color = Color(0.188235, 0.188235, 0.188235, 0.823529)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Pause" type="Node2D" node_paths=PackedStringArray("folderAnim", "saveMessage", "allControl", "randText", "back_slide", "sfx_slide")]
visible = false
z_index = 4
script = ExtResource("1_e0jm0")
folderAnim = NodePath("AnimatedSprite2D")
saveMessage = NodePath("Message")
allControl = NodePath("Control")
randText = NodePath("Control/RandomTextBoundries/RichTextLabel")
possibleTexts = Array[String](["Corporate excelence awaits!", "Think of the shareholders!", "Maybe we should circle back on this", "Wait until the investors hear about this!"])
topLimit = 26.0
botLimit = 174.0
leftLimit = -34.0
rightLimit = 300.0
angleLimit = 180.0
back_slide = NodePath("Control/Panel/Background Music/background")
sfx_slide = NodePath("Control/Panel/SFX/sfx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 5
texture_filter = 1
position = Vector2(-7, 16)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_1hph1")
animation = &"open"
frame = 4
frame_progress = 1.0

[node name="Grey" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.443137)
z_index = 4
texture = ExtResource("3_nsogc")

[node name="Control" type="Control" parent="."]
z_index = 5
layout_mode = 3
anchors_preset = 0
offset_left = -459.0
offset_top = -494.0
offset_right = 473.0
offset_bottom = 493.0

[node name="HeadLabel" type="RichTextLabel" parent="Control"]
z_index = 5
texture_filter = 1
layout_mode = 0
offset_left = 29.0
offset_top = -45.0
offset_right = 285.0
offset_bottom = -2.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_0pswh")
theme_override_font_sizes/normal_font_size = 21
text = "Project Lagoon Breeze"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 15.0
offset_top = 5.0
offset_right = 916.0
offset_bottom = 480.0
mouse_filter = 2

[node name="Background Music" type="Control" parent="Control/Panel"]
anchors_preset = 0
offset_left = 176.0
offset_top = 16.0
offset_right = 730.0
offset_bottom = 74.0

[node name="background" type="HSlider" parent="Control/Panel/Background Music"]
z_index = 3
layout_mode = 0
offset_left = 28.0
offset_top = 69.0
offset_right = 367.0
offset_bottom = 85.0
scale = Vector2(1.5, 1.5)
min_value = -80.0
max_value = 6.0
step = 0.5
value = -20.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panel/Background Music"]
z_index = 1
layout_mode = 0
offset_left = 75.0
offset_top = 1.0
offset_right = 476.0
offset_bottom = 72.0
theme_override_fonts/normal_font = ExtResource("4_0pswh")
theme_override_font_sizes/normal_font_size = 38
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFX" type="Control" parent="Control/Panel"]
anchors_preset = 0
offset_left = 176.0
offset_top = 116.0
offset_right = 730.0
offset_bottom = 244.0

[node name="sfx" type="HSlider" parent="Control/Panel/SFX"]
z_index = 3
layout_mode = 0
offset_left = 28.0
offset_top = 69.0
offset_right = 367.0
offset_bottom = 85.0
scale = Vector2(1.5, 1.5)
min_value = -80.0
max_value = 6.0
step = 0.5

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panel/SFX"]
z_index = 1
layout_mode = 0
offset_left = 75.0
offset_top = 1.0
offset_right = 476.0
offset_bottom = 72.0
theme_override_fonts/normal_font = ExtResource("4_0pswh")
theme_override_font_sizes/normal_font_size = 38
text = "SFX Audio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Control/Panel"]
z_index = 1
layout_mode = 0
offset_left = 252.0
offset_top = 248.0
offset_right = 653.0
offset_bottom = 319.0
theme_override_fonts/normal_font = ExtResource("4_0pswh")
theme_override_font_sizes/normal_font_size = 38
text = "Fullscreen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="Button" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 381.0
offset_right = 353.0
offset_bottom = 453.0
theme_override_fonts/font = ExtResource("4_0pswh")
theme_override_font_sizes/font_size = 39
text = "Main Menu"

[node name="Credits" type="Button" parent="Control"]
layout_mode = 0
offset_left = 624.0
offset_top = 383.0
offset_right = 837.0
offset_bottom = 455.0
theme_override_fonts/font = ExtResource("4_0pswh")
theme_override_font_sizes/font_size = 39
text = "Credits"

[node name="RandomTextBoundries" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 33.0
offset_top = 583.0
offset_right = 944.0
offset_bottom = 899.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/RandomTextBoundries"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.962
anchor_bottom = 1.0
offset_left = 278.0
offset_top = 26.0
offset_right = -230.382
offset_bottom = -176.0
rotation = 1.08785
pivot_offset = Vector2(200, 60)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_0pswh")
theme_override_font_sizes/normal_font_size = 45
text = "Random Sample Text"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="FullScreen" type="CheckBox" parent="Control"]
z_index = 5
layout_mode = 0
offset_left = 612.0
offset_top = 266.0
offset_right = 636.0
offset_bottom = 290.0
scale = Vector2(2, 2)

[node name="Message" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = -249.0
offset_top = -163.0
offset_right = 278.0
offset_bottom = 144.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nsogc")

[node name="RichTextLabel" type="RichTextLabel" parent="Message"]
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 530.0
offset_bottom = 195.0
theme_override_fonts/normal_font = ExtResource("5_3fojq")
theme_override_font_sizes/normal_font_size = 46
text = "In the Demo Version, your progress is not saved"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageOkay" type="Button" parent="Message"]
layout_mode = 0
offset_left = 55.0
offset_top = 221.0
offset_right = 487.0
offset_bottom = 269.0
theme_override_fonts/font = ExtResource("5_3fojq")
theme_override_font_sizes/font_size = 39
text = "Take me to the menu"

[connection signal="value_changed" from="Control/Panel/Background Music/background" to="." method="_on_background_value_changed"]
[connection signal="value_changed" from="Control/Panel/SFX/sfx" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="Control/MainMenu" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Control/Credits" to="." method="_on_credits_pressed"]
[connection signal="toggled" from="Control/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="pressed" from="Message/MessageOkay" to="." method="_on_message_okay_pressed"]
